# shoutrrr-rs

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: main.yml
examples/: send.rs
src/: config.rs  error.rs  lib.rs  message.rs  params.rs  router.rs  service.rs
src/services/: mod.rs
src/services/discord/: config.rs  mod.rs  payload.rs
src/services/generic/: config.rs  mod.rs  query.rs
src/services/slack/: config.rs  mod.rs  payload.rs  token.rs
src/transport/: mock.rs  mod.rs  reqwest.rs  worker.rs
tests/: discord.rs  generic.rs  message.rs  slack.rs
tests/common/: mod.rs
